# projectNorthStar

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PROJECT_ORGANIZATION.md  README.md  README_OLD.md  SECURITY_CLEANUP.md  build-neighbors.ps1  check_data.py  check_data_format.py  check_meta.py  check_raw_meta.py  config.py  copilot-instructions.md  create_corrected_views.py  create_final_views.py  create_final_working_views.py  create_sample_data.py  create_working_views.py  dashboard_summary.py  debug_json.py  discover_models.py  integration_status.py  pyproject.toml  quick_test.py  run_util.py  secrets_allowlist.txt  security_check.py  setup_dashboard.py  simple_model_test.py  sitecustomize.py  test_alt_models.py  test_available_models.py  test_complete_pipeline.py  test_east1_dataset.py  test_embedding.py  (+13 more)
.github/: copilot-instructions.md  pull_request_template.md
bq/: __init__.py  bigquery_client.py  load.py  refresh.py  router.py  tickets.py
core/: __init__.py  cli.py  orchestrator.py
debug/: __init__.py  debug_dates.py  debug_duplicates.py
docs/: PRD.md  architecture.mmd  bigquery_prd.md  release_notes_v1.0.0.md  survey.md  triage_sequence.mmd
experts/: __init__.py  kb_writer.py  router.py
ingest/: __init__.py  chunker.py  log_parse.py  ocr.py
northstar_bq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: BigQueryAI_demo.ipynb  Submission_Demo.ipynb
pipeline/: __init__.py  classifier.py  config.py
retrieval/: __init__.py  hybrid.py
samples/: issues_p0.jsonl  issues_p1.jsonl  issues_p2.jsonl  issues_p3.jsonl  recent_critical_issues.jsonl
scripts/: _bq_utils.py  arch_verify.ps1  build_chunk_neighbors.sql  capture_dashboard.md  check_bq_resources.py  create_bq_connection.py  create_bq_connection_east1.py  create_east1_connection.py  create_remote_models.py  create_views.py  demo_end_to_end.py  gen_assets.py  gen_eval_set.py  grant_vertex_permissions.py  make_changelog.py  metrics_trend.py  public_sweep.py  refresh_all.py  release.py  run_eval.py  secret_sweep.py  validate_phase0.py
sql/: build_chunk_neighbors.sql  chunk_neighbors_ddl.sql  chunk_vector_search.sql  create_remote_models.sql  create_router_training.sql  ddl_chunk_neighbors.sql  ddl_tickets.sql  (+21 more)
(+45 files in other folders)
