[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "northstar_bq"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []  # core stays lean

[project.optional-dependencies]
bigquery = [
	"google-cloud-bigquery>=3.25.0",
	"google-auth>=2.33.0",
]
ingest = [
	"pymupdf>=1.24.0",
	"pytesseract>=0.3.10",
	"Pillow>=10.0.0",
]
dashboard = [
	"streamlit>=1.36.0",
]
dev = [
	"pytest>=8.0.0",
	"ruff>=0.5.0",
	"black>=24.0",
	"pre-commit>=3.7.0",
]

[tool.setuptools]
packages = ["core", "experts", "verify", "src", "retrieval", "bq", "pipeline"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
